# IDG2001-Assignment1

./: Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  test2.py  tox.ini
.github/workflows/: tests.yml
back-end/: app.py  file_processing.py  script.py  test2.py
back-end/MD/: Craig_Johnson.md  Jamie_Smith.md  Laura_Grey.md  Mary_Jenkins.md
back-end/dummy/: people.csv
back-end/test_files/: data.csv  template.md
back-end/uploads/: Barack_Obama.md  Rachel_Booker.md  people.csv  template.md
docs/: project_structure_filtered.txt
front-end/: download.js  index.html  upload.html  upload_success.html
front-end/templates/: persons.html  upload.html
src/: app.py
src/dummy/: template.md
tests/: __init__.py  test.py  test_file_processing.py  tests.py
