[metadata]
name = assignment cloud
description = assignment 1
author = group4


[options]
packages = 
    lab8
install_requires = 
    requests>=2
python_requires = >=3.7
package_dir = 
    =src
zip_safe = no


[options.extras_require]
testing = 
    pytest>=7.2
    pytest-cov>=4.0
    mypy>=0.991
    flake8>=6.0
    tox>=4.0


[options.package_data]
exercise7 = py.typed


[flake8]
max-line-length = 80
ignore = W191, E203, E223, E226


[pycodestyle]
count = False
ignore = E226,E41,W191
max-line-length = 80
statistics = True
