[metadata]
name = assignment1
author = Group 4
author_email = group4@example.com
description = Our Python project for Assignment 1

[options.extras_require]
testing =
    pytest==7.3.1
    pytest-cov==4.0.0
    mypy==1.2.0
    flake8==6.0.0
    black==23.3.0
    tox==4.4.12
    setuptools==67.6.1
    pandas==1.3.3

[flake8]
#Flake8 settings here

[mypy]
#Mypy settings here